# moltis

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  biome.json  browser-automation.html  changelog.html  fly.toml  install.sh  justfile  print.html  render.yaml  sandbox.html  searchindex.js  toc.html  toc.js
.claude/: settings.json
.do/: deploy.template.yaml
.github/workflows/: ci.yml  docs.yml  provider-integration.yml  release.yml
apps/ios/: project.yml
apps/macos/: CHANGELOG.md
crates/channels/: Cargo.toml
crates/cli/: Cargo.toml
crates/code-index/: Cargo.toml
crates/common/: Cargo.toml
crates/config/: Cargo.toml
crates/gateway/: Cargo.toml
crates/httpd/: Cargo.toml
crates/matrix/: Cargo.toml
crates/matrix/src/: access.rs  config.rs  handler.rs  outbound.rs  plugin.rs
crates/matrix/src/handler/: implementation.rs  tests.rs
crates/memory/: Cargo.toml
crates/slack/: Cargo.toml
crates/slack/src/: client.rs  config.rs  lib.rs  outbound.rs  plugin.rs  socket.rs  state.rs  webhook.rs
crates/tools/: Cargo.toml
docs/: package-lock.json  package.json
plans/: slack-slash-command-manifest-snippet.md
scripts/: build-swift-bridge.sh  check-file-size.sh  cleanup-e2e-build-artifacts.sh  generate-ios-graphql.sh  gpg-sign-release.sh  install-linux-build-deps.sh  local-validate.sh  run-provider-integration-weekly.sh
website/: index.de.html  index.en.html  index.es.html  index.fr.html  index.it.html  index.ja.html  index.ko.html  index.pt.html  index.ru.html  index.zh-TW.html  index.zh.html  install.sh  releases.json  style.css
(+511 files in other folders)
