[package]
edition.workspace = true
name              = "moltis-matrix"
version.workspace = true

[dependencies]
matrix-sdk      = { default-features = false, features = ["markdown", "native-tls"], version = "0.16" }
moltis-channels = { path = "../channels" }
moltis-common   = { path = "../common" }

async-trait = "0.1"
secrecy     = { features = ["serde"], version = "0.8" }
serde       = { features = ["derive"], version = "1" }
serde_json  = "1"
thiserror   = "2"
tokio       = { features = ["macros", "rt", "sync", "time"], version = "1" }
tokio-util  = { features = ["rt"], version = "0.7" }
tracing     = "0.1"

[dev-dependencies]
tokio = { features = ["macros", "rt-multi-thread"], version = "1" }
